[tool.pdm]

[project]
name = "BoneFlet"
version = "0.1.0dev1"
description = ""
authors = [
    {name = "六个骨头", email = "2742392377@qq.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
