[project]
name = "BoneFlet"
dynamic = ["version"]
description = ""
authors = [
    {name = "Rongrui Zhan", email = "2742392377@qq.com"},
]
dependencies = [
    "flet>=0.7.4",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.version]
source = "file"
path = "boneflet/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
